<resources>
    <string name="app_name">RoboYtesApp01</string>
    <string name="lbWelcome">Witaj!</string>

    <!-- Elementy powiązane z kontrolką EiPolaczenie ........................................... -->
    <string name="btnPolaczRobot_polacz">Połącz</string>
    <string name="btnPolaczRobot_rozlacz">Rozłącz</string>
    <string name="btnUstawieniaRobot">Ustawienia</string>

    <string name="stateDisconnected">Rozłączono</string>
    <string name="stateConnected">Połączono</string>
    <string name="stateConnecting">Łączę się</string>
    <string name="stateConnectionError">Błąd połączenia</string>
    <string name="stateEdition">Edycja ustawien</string>

    <!-- Elementy dla EiLista, EiSuwak ,EiWlacznik,EiKolor...................................... -->
    <string name="commonCustom">Zmienny :</string>
    <string name="commonParam1">Param 1:</string>
    <string name="commonParam1Val">1</string>
    <string name="commonBool1">Bool 1:</string>
    <string name="commonColor">Kolor</string>
    <string name="dlColorTitle">Proszę wybierz kolor</string>  <!-- naglowek w oknie dialogowym -->
    <string name="dlColorBtnOk">Zatwierdz</string> <!-- przycisk OK w oknie dialogowym -->
    <!-- Panel sterowania robotem .............................................................. -->
    <string name="btndesc_przod_lewo">przod lewo</string>
    <string name="btndesc_przod">przod</string>
    <string name="btndesc_przod_prawo">przod prawo</string>
    <string name="btndesc_tyl_lewo">tyl lewo</string>
    <string name="btndesc_tyl">tyl</string>
    <string name="btndesc_tyl_prawo">tyl prawo</string>
    <string name="btndesc_fun1">funkcja 1</string>
    <string name="btndesc_fun2">funkcja 2</string>
    <string name="btndesc_fun3">funkcja 3</string>
    <string name="btndesc_fun4">funkcja 4</string>
    <string name="btndesc_fun5">funkcja 5</string>
    <string name="btndesc_fun6">funkcja 6</string>
    <string name="btndesc_fun7">funkcja 7</string>
    <string name="btndesc_fun8">funkcja 8</string>
    <!-- Elementy powiązane z panelem ustawien ................................................. -->
    <string name="btnAkceptuj">Akceptuj</string>
    <string name="btnZamknij">Zamknij</string>

    <string name="torAudio_desc">Tor audio:</string>
    <string name="torAudio_bez_wulgaryzmow">Fammily friendly</string>
    <string name="torAudio_wulgaryzmy">Not fammily friendly</string>
    <string-array name="arrTorAudio">
        <item>@string/torAudio_bez_wulgaryzmow</item>
        <item>@string/torAudio_wulgaryzmy</item>
    </string-array>

    <string name="trybAudio_desc">Tryb audio:</string>
    <string name="trybAudio_normalny">Normalny</string>
<!-- wyłączone , bo różne scalaki rozjeżdzają audio -->
<!--
    <string name="trybAudio_stereoMuzyka">Stereo muzyka</string>
    <string name="trybAudio_stereoEfekty">Stereo efekty</string>
-->
    <string name="trybAudio_wyciszanie">Wyciszanie</string>
    <string name="trybAudio_pauzowanie">Pauzowanie</string>
    <string-array name="arrTrybAudio">
        <item>@string/trybAudio_normalny</item>
<!--
        <item>@string/trybAudio_stereoMuzyka</item>
        <item>@string/trybAudio_stereoEfekty</item>
-->
        <item>@string/trybAudio_wyciszanie</item>
        <item>@string/trybAudio_pauzowanie</item>
    </string-array>

    <!-- Dane testowe .......................................................................... -->
    <string name="utwor_desc"> Utwór:</string>
    <string name="utwor_losowy">losowy utwor</string>
    <string name="utwor_test1">utwor 1</string>
    <string name="utwor_test2">utwor 2</string>
    <string name="utwor_test3">utwor 3</string>
    <string name="utwor_test4">utwor 4</string>
    <string-array name="arrUtworyTest">
        <item>@string/utwor_losowy</item>
        <item>@string/utwor_test1</item>
        <item>@string/utwor_test2</item>
        <item>@string/utwor_test3</item>
        <item>@string/utwor_test4</item>
    </string-array>

    <string name="efekt_test_1">efekt dzwiekowy 1</string>
    <string name="efekt_test_2">efekt dzwiekowy 2</string>
    <string name="efekt_test_3">efekt dzwiekowy 3</string>
    <string-array name="arrEfekty">
        <item>@string/efekt_test_1</item>
        <item>@string/efekt_test_2</item>
        <item>@string/efekt_test_3</item>
    </string-array>

    <string name="lista_test_1">lista test 1</string>
    <string name="lista_test_2">lista test 2</string>
    <string name="lista_test_3">lista test 3</string>
    <string name="lista_test_4">lista test 4</string>
    <string name="lbAudio_zyroskop">Audio zyroskop:</string>
    <string name="lbAudio_radar">Audio radar :</string>
    <string name="lbAuto_stop">Auto stop :</string>
    <string name="lbPodswietlanie">Wlacz podswietlenie</string>

    <string-array name="arrListaTest">
        <item>@string/lista_test_1</item>
        <item>@string/lista_test_2</item>
        <item>@string/lista_test_3</item>
        <item>@string/lista_test_4</item>
    </string-array>

</resources>